--- a/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/pom.xml
+++ b/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/pom.xml
@@ -18,6 +18,7 @@
 		<module>org.etri.slice.devices.car.humansensor</module>
 		<module>org.etri.slice.devices.car.carseatcontroller</module>
 		<module>org.etri.slice.devices.car.envsensor</module>
+		<module>org.etri.slice.devices.car.mirrorcontroller</module>
 		<module>org.etri.slice.devices.car.radiocontroller</module>
 		<module>org.etri.slice.devices.car.wipercontroller</module>
 		<module>org.etri.slice.devices.car.windowcontroller</module>
