--- a/org.etri.slice.car/org.etri.slice.exhibition/pom.xml
+++ b/org.etri.slice.car/org.etri.slice.exhibition/pom.xml
@@ -24,7 +24,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<felix.ipojo.version>1.12.1</felix.ipojo.version>
 		<project.inceptionYear>2017</project.inceptionYear>
-		<slice.home>C:\Users\SLICE\Dropbox\전시회용 repo,agent\org.etri.slice.distribution</slice.home>
+		<slice.home>/Users/yhsuh/development/slice-project/git/slice/org.etri.slice.distribution</slice.home>
 	</properties>
 	
 	<distributionManagement>
