--- a/org.etri.slice.car/pom.xml
+++ b/org.etri.slice.car/pom.xml
@@ -12,7 +12,7 @@
 	
 	<properties>
 		<slice.generated.directory>${project.basedir}/org.etri.slice.generated</slice.generated.directory>
-		<slice.home>C:\Users\SLICE\Desktop\git_exhibition(180912)\slice\org.etri.slice.distribution</slice.home>
+		<slice.home>/Users/yhsuh/development/slice-project/git/slice/org.etri.slice.distribution</slice.home>
 	</properties>	
 	
 	<repositories>
