--- a/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/org.etri.slice.devices.car.mirrorcontroller/bundle.properties
+++ b/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/org.etri.slice.devices.car.mirrorcontroller/bundle.properties
@@ -1,5 +1,5 @@
 # Configure the created bundle
-embed.dependency=mqtt-drpc,;scope=!provided|test
+embed.dependency=mqtt-drpc,msm,;scope=!provided|test
 embed.directory=lib
 bundle.classpath=.,{maven-dependencies}		
 private.packages=org.etri.slice.devices.car.mirrorcontroller.*
