--- a/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/org.etri.slice.devices.car.mirrorcontroller/pom.xml
+++ b/org.etri.slice.car/org.etri.slice.exhibition/org.etri.slice.devices/org.etri.slice.devices.car.mirrorcontroller/pom.xml
@@ -47,6 +47,7 @@
 						<Embed-Dependency>${embed.dependency}</Embed-Dependency>
 						<Embed-Directory>${embed.directory}</Embed-Directory>	
 						<Private-Package>${private.packages}</Private-Package>
+						<Import-Package>*;resolution:=optional</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
